# guardian-sec

./: .env.example  .env.vps.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml
docs/: deployment-learniam.md  deployment.md  guardian-handoff.md
guardian/: __init__.py  cli.py
guardian/engine/: alert.py  analysis_queue.py  attck.py  correlator.py  responder.py  slm.py
guardian/intel/: breach_lookup.py  clamav_scan.py  cross_verify.py  enricher.py  feeds.py  global_ticker.py  heuristics.py  unified_scan.py  verifier.py
guardian/modules/: code_scanner.py  file_monitor.py  log_analyzer.py  network_monitor.py
guardian/security/: __init__.py  access.py  auth.py  crypto.py  keys.py  payload.py  session.py  tls.py  vault.py
guardian/utils/: display.py  report.py
guardian/web/: deploy.py  persistence.py  ratelimit.py  server.py  settings.py
guardian/web/guardian_web_fix/: APPLY.txt
guardian/web/guardian_web_fix/guardian/web/: server.py
guardian/web/guardian_web_fix/guardian/web/static/: index.html
guardian/web/static/: index.html
scripts/: Open-Guardian.bat  guardian.service  install-clamav.sh  open-guardian.sh  qa_mock_scenarios.py  serve-live.sh  serve-named.sh  serve-public.sh  serve-shared.sh  serve-tls.sh  serve-vps.sh  setup-env.sh  setup-named-tunnel.sh  setup.sh
tests/: conftest.py  test_access.py  test_alert.py  test_analysis_queue.py  test_attck.py  test_auth_deploy.py  test_breach_lookup.py  test_breach_providers.py  test_clamav_scan.py  test_cli.py  test_code_scanner.py  test_correlator.py  test_cross_verify.py  test_data_dir.py  test_deploy.py  test_display.py  test_enricher.py  test_feeds.py  test_file_monitor_perf.py  test_global_ticker.py  test_heuristics.py  test_log_analyzer.py  test_monitor_async_offload.py  test_persistence_settings.py  test_responder.py  test_security.py  test_slm_lazy.py  test_tls.py  test_unified_scan.py  test_verifier.py  test_web_server.py
website/learniam/: index.html  nginx-apex.conf
