[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-sec"
version = "0.1.0"
description = "SLM-powered local cybersecurity defense system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kshitish Jha" }]
keywords = ["cybersecurity", "security", "llm", "slm", "phi3", "defense"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/ksjkoba/guardian-sec"
Repository = "https://github.com/ksjkoba/guardian-sec"
Issues = "https://github.com/ksjkoba/guardian-sec/issues"

[project.optional-dependencies]
full = [
    "llama-cpp-python>=0.2.57",
    "scapy>=2.5",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
]
network = ["scapy>=2.5"]
slm = ["llama-cpp-python>=0.2.57"]
web = ["fastapi>=0.111", "uvicorn[standard]>=0.29", "cryptography>=42.0", "python-multipart>=0.0.9"]

[project.scripts]
guardian = "guardian.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["guardian*"]

[tool.setuptools.package-data]
guardian = ["py.typed", "web/static/*"]
